--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./backend:/work
 
-  # 追記 to make web-server-container
+  #追記　to make web-server container
   web:
     image: nginx:1.20-alpine
     ports:
@@ -14,3 +14,12 @@ services:
       - ./backend:/work
       - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /work
+
+  # 追記 to make db container
+  db:
+    build: ./infra/mysql
+    volumes:
+      - db-store:/var/lib/mysql
+
+volumes:
+  db-store:
